src/app/assets/app.component.scss
/* ... */
/* HAMBURGER */

.hamburger-icon {
    @media screen
    and (max-width: 667px)
    and (-webkit-min-device-pixel-ratio: 2) {
        padding: 5px;
        background-image: url(menu.svg);
        background-repeat: no-repeat;
        background-size: contain;
        width: 30px;
        height: 30px;
        margin: 5px;
        box-sizing: border-box;
    }
}

.hamburger-menu {
    position: absolute;
    top: 60px;
    right:0px;
    width: 70%;
    z-index: 10;
}

.menu-in {
    transform: translateX(0);
    transition: 1s ease-out;
}

.menu-out {
    transform: translateX(100%);
    transition: 1s ease-in;
}

.hamburger-menu a {
    display: none;
    @media screen
    and (max-width: 667px)
    and (-webkit-min-device-pixel-ratio: 2) {
        height: 50px;
        display: inline-block;
        display: flex;
        justify-content: flex-start;
        flex-direction: column;
        border-radius: 0;
        padding: 25px;
        justify-content: center;
        background-color: $coolGray;
        box-sizing: border-box;
    }
}

.hamburger-menu a:nth-of-type(odd) {
    background-color: #4f4f4f;
}

.hamburger-menu a:hover {
    @media screen
    and (max-width: 667px)
    and (-webkit-min-device-pixel-ratio: 2) {
        box-shadow: none;
        transform: none;
        border: 1px solid $coolGray;
        transition: none;
        background-color: white;
        color: $coolGray;
    }
}

.blur-on {
    @media screen
    and (max-width: 667px)
    and (-webkit-min-device-pixel-ratio: 2) {
        z-index: 5;
        position: absolute;
        left: 0;
        top: 60px;
        bottom: 0px;
        width: 100%;
        height: 2000%;
        background-color: rgba(0, 0, 0, 0.20);
        transition: background 1s ease;
    }
}

.blur-off {
    @media screen
    and (max-width: 667px)
    and (-webkit-min-device-pixel-ratio: 2) {
        z-index: -10;
        position: absolute;
        left: 0;
        top: 60px;
        bottom: 0px;
        width: 100%;
        height: 2000%;
        background-color: rgba(0, 0, 0, 0);
        transform: translateX(100%);
        transition: background 1s ease;
    }
}

/* DROP DOWN AND UP ARROW */

.drop_down, .up_arrow {
    width: 25px;
    height: 25px;
    background-image: url(uparrow.svg);
    background-repeat: no-repeat;
    background-size: contain;
    margin: 20px;
    cursor: pointer;
}

.up_arrow {
    background-image: url(downarrow.svg);
}

/* FORMS */

.form {
    margin: auto;
    font-size: .8rem
}

.form-in {
    transform: translateY(0);
    transition: 1s ease-out;
}

.form-out {
    transform: translateY(-100%);
    transition: 1s ease-in;
}

.form-group {
    padding: 20px;
    display: flex;
    flex-direction: column;
    align-items: center;
}

.form-group input {
    font-size: 1.1rem;
    color: $coolGray;
    padding-left: 5px;
    display: flex;
    justify-content: center;
    flex-direction: column;
    margin: auto;
    border: none;
    border-bottom: solid 2px $coolGray;
}

.form-group input, .error-message {
    width: 25vw;
    min-width: 200px;
}

.form-group input:focus, .meal:focus {
    outline-color: transparent;
    outline-style: none;
    background-color: #f0f0f0;
    transition: all 0.3s linear;
}

.form-group input:-webkit-autofill {
    -webkit-box-shadow: 0 0 0 30px white inset;
}

.form-group input.ng-touched {
    border-bottom: solid 2px tomato;
    transition: none;
}

.form-group input.ng-valid {
    border-bottom: solid 2px #20d1ac;
    transition: none;
}

.error-message {
    color: tomato;
    background-color: #ffd0d0;
    padding: 5px;
    display: block;
    border-radius: 3px;
    margin: auto;
}

/* LABELS */

label {
    font-size: 1.1rem;
}

/* SEND-BUTTON */

.button-group {
    padding: 20px 0 60px 0;
    display: flex;
    margin: 0;
    justify-content: center;
}

.send-button {
    font-size: 1rem;
    font-weight: bold;
    padding: 6px 8px;
    border-radius: 4px;
    border: none;
    background: none;
    cursor: pointer;
    color: white;
    background-color: $coolGray;
    transition: .5s;
    margin-left: 10px;
    border: .5px solid white;
}

.send-button:not([disabled]):hover {
    color: $coolGray;
    background-color: white;
    box-shadow: 0px 4px 0px 0px rgba(143,143,143,1);
    transform: translateY(-3px);
    border: .5px solid rgba(143,143,143,1);
    transition: .5s;
}

.send-button[disabled] {
    color : rgba(0, 0, 0, 0.26);
    background-color: transparent;
}

.spinner {
    position: absolute;
    left: 465px;
    background-image: url("spinner.gif");
    background-repeat: no-repeat;
    background-size: contain;
    height: 30px;
    width: 30px;
    margin-left: 5px;
}

/* MEAL PLAN */

.meal {
    font-size: .9rem;
    color: $coolGray;
    max-width: 40%;
    background-color: white;
}

/* CHECKBOX */

.form-group-checkbox {
    margin-top: 5px;
    @media screen
    and (max-width: 667px)
    and (-webkit-min-device-pixel-ratio: 2) {
    padding-left: 25%;
    }
}

.container__checkbox {
    display: flex;
    flex-wrap: wrap;
    height: 90px;
    align-items: baseline;
    align-content: center;
    @media screen
    and (max-width: 667px)
    and (-webkit-min-device-pixel-ratio: 2) {
        flex-wrap: nowrap;
        height: auto;
    }

    input {
        display: inline;
        width: auto;
        margin-right: 20px;
        @media screen
        and (max-width: 667px)
        and (-webkit-min-device-pixel-ratio: 2) {
            min-width: auto;
        }
    }

    label {
        margin-right: 20px;
    }
}

/* STAR */

.rating {
    label {
        padding-bottom: 10px;
    }
}

.container__star {
    margin: auto;
}

.rating span {
    float:right;
    position:relative;
}

.rating span input {
    position:absolute;
    top:0;
    left:0;
    opacity:0;
    width: auto;
    @media screen
    and (max-width: 667px)
    and (-webkit-min-device-pixel-ratio: 2) {
        min-width: auto;
    }
}
/* ... */

